--- a/src/page/Hooks/index.styl
+++ b/src/page/Hooks/index.styl
@@ -1,7 +1,18 @@
-#About{
-    width 100vw;
-    height: 100vh;
-    img{
-        display: block
-    }
+
+.container{
+  display:flex;
+  height:100vh;
+}
+aside{
+  width:50px;
+  background:#ccc;
+}
+main{
+  flex-grow:1;
+  background:#def;
+}
+nav{
+  width:80px;
+  background:#ccc;
+//   order:-1;
 }
